cmake_minimum_required(VERSION 3.10)
project(examples)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ex1 example1/main.cpp)

add_executable(ex2 example2/main.cpp)

add_executable(ex3 example3/main.cpp)

add_executable(ex4 example4/main.cpp)

add_executable(ex5 example5/main.cpp)